@@ -2,7 +2,7 @@ cd ../../java/
 javac *.java
 pid=$!
 
-for k in 1000 2000 3000 4000 5000 10000
+for k in 1000
 do
 for j in 5000 10000 50000 100000 500000 1000000
 do
@@ -10,8 +10,8 @@ for h in 5000 10000 50000
 do
 for i in 1 2 3 4 5 6 7 8 9 10 
 do
-java SendRecvPrincipal $h $j $k
 echo "$h DataSize $j Repetitions $k Process - Java"
+java -server -XX:+TieredCompilation -XX:+AggressiveOpts SendRecvPrincipal $h $j $k
 done
 done
 done
